 * Restore the timeout service, we need it to keep the app in memory long
   enough to clear the clipboard and to remove the notifications.
 * Autolink comment and advanced fields

KeePassDroid (1.9.18.2)
 * Updated Dutch translations from Erik Jan Meijer
 * Updated Russian translations from I Nedoboy
 * Add Danish translations from Frederik Svarre

KeePassDroid (1.9.18.1)
 * Fix crash with blank icons

KeePassDroid (1.9.18)
 * Add input types to entry fields
 * Show username in the title list for TAN entries
 * Switch to monospace font for password fields
 * Implement action bar on entry edit activity
 * Updated Russian translations from I Nedoboy

KeePassDroid (1.9.17)
 * Updated Russian translations from I Nedoboy
 * New Spanish translations from jipanos
 * New Dutch translations Erik Fdevriendt
 * Fix header verification in .kdbx
 * Rework timeout implementation should fix some bugs with passwords persisting

KeePassDroid (1.9.16)
 * Updated Hungarian translations from intel
 * Updated German translations from rvs2008

KeePassDroid (1.9.15)
 * Fix compatibility with desktop KeePass 2.20
 * Verify header integrity of .kdbx databases

KeePassDroid (1.9.14)
 * Resolve crashes when switch back to the entry view
 * Start making use of action bar on devices with Android >= 3.0
 * Updated Russian translations from I Nedoboy
 * Fix Czech translations

KeePassDroid (1.9.13)
 * Allow keys with 0 encryption rounds
 * Czech translations from H Vanek
 * Updated Russian translations from I Nedoboy
 * Clarify text on notification pop-ups
 * Fix text selection in entries on devices with Android >= 3.0

KeePassDroid (1.9.12.1)
 * Add title bar on Honeycomb+ devices, so ... menu is always available

KeePassDroid (1.9.11)
 * Protect against crashes when clicking on the browse icon
 * Add Hungarian translations from intel

KeePassDroid (1.9.10)
 * Add support for the Holo theme on devices > 3.0 from Space Cowboy
 * Add Ukranian translations from andriykopanytsia