@@ -1,5 +1,5 @@
 /*
- * Copyright 2009 Brian Pellin.
+ * Copyright 2009-2012 Brian Pellin.
  *     
  * This file is part of KeePassDroid.
  *
@@ -30,11 +30,13 @@ import com.android.keepass.R;
 import com.keepassdroid.Database;
 import com.keepassdroid.app.App;
 import com.keepassdroid.database.exception.ArcFourException;
+import com.keepassdroid.database.exception.InvalidAlgorithmException;
 import com.keepassdroid.database.exception.InvalidDBException;
 import com.keepassdroid.database.exception.InvalidDBSignatureException;
 import com.keepassdroid.database.exception.InvalidDBVersionException;
 import com.keepassdroid.database.exception.InvalidKeyFileException;
 import com.keepassdroid.database.exception.InvalidPasswordException;
+import com.keepassdroid.database.exception.KeyFileEmptyException;
 import com.keepassdroid.fileselect.FileDbHelper;
 
 public class LoadDB extends RunnableOnFinish {
@@ -77,8 +79,14 @@ public class LoadDB extends RunnableOnFinish {
 		} catch (IOException e) {
 			finish(false, e.getMessage());
 			return;
+		} catch (KeyFileEmptyException e) {
+			finish(false, mCtx.getString(R.string.keyfile_is_empty));
+			return;
+		} catch (InvalidAlgorithmException e) {
+			finish(false, mCtx.getString(R.string.invalid_algorithm));
+			return;
 		} catch (InvalidKeyFileException e) {
-			finish(false, e.getMessage());
+			finish(false, mCtx.getString(R.string.keyfile_does_not_exist));
 			return;
 		} catch (InvalidDBSignatureException e) {
 			finish(false, mCtx.getString(R.string.invalid_db_sig));
