@@ -1,6 +1,7 @@
  * Restore the timeout service, we need it to keep the app in memory long
    enough to clear the clipboard and to remove the notifications.
  * Autolink comment and advanced fields
+ * i18n more database error strings
 
 KeePassDroid (1.9.18.2)
  * Updated Dutch translations from Erik Jan Meijer
